✨ feat(maze settings): add settings

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -1,16 +1,23 @@
 #dashboard {
   padding: 1rem;
   padding-top: 6rem;
-  display: flex;
+
+  display:flex;
 }
+
 #maze {
   width: 60%;
   min-height: 60vh;
+
   text-align: center;
+
   resize: none;
 }
+
 #canvas {
   width: 80%;
+  // height: 80vh;
   padding: 2rem;
+  
   border: 3px solid black;
 }
