--- a/client/src/Settings.css
+++ b/client/src/Settings.css
@@ -3,6 +3,12 @@
   min-height: 60vh;
   border-radius: 1%;
   box-shadow: 0 0 0.25rem grey;
+}
+#settings h1 {
+  text-align: center;
+}
+#settings #settings-content {
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,12 +26,29 @@
 #settings form label {
   font-size: 1.5rem;
 }
+#settings form#dimensions #dimension-inputs {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#settings form#dimensions #dimension-inputs label {
+  text-align: center;
+}
+#settings form#dimensions #dimension-inputs label,
+#settings form#dimensions #dimension-inputs input {
+  width: 43%;
+}
 #settings form button {
   background-color: #f0a61c;
   color: white;
+  border: none;
   border-radius: 2%;
+}
+#settings form button:hover {
+  background-color: rgba(240, 166, 28, 0.411);
+  color: #ff7171;
 }
 #settings form #speed-choice button {
   width: 49%;
-  margin: 0.5%;
+  margin-right: 1%;
 }
