--- a/client/src/Settings.less
+++ b/client/src/Settings.less
@@ -5,10 +5,17 @@
   border-radius: 1%;
   box-shadow: 0 0 0.25rem grey;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  & h1 {
+    text-align: center;
+  }
+
+  & #settings-content {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
 
   & form {
     display: flex;
@@ -26,16 +33,36 @@
       font-size: 1.5rem;
     }
 
+    &#dimensions #dimension-inputs {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      & label {
+        text-align: center;
+      }
+
+      & label, input {
+        width: 43%;
+      }
+    }
+
     & button {
       background-color: rgb(240, 166, 28);
       color: white;
       
+      border: none;
       border-radius: 2%;
+
+      &:hover {
+        background-color: rgba(240, 166, 28, 0.411);
+        color: rgb(255, 113, 113);
+      }
     }
 
     & #speed-choice button {
       width: 49%;
-      margin: 0.5%;
+      margin-right: 1%;
     }
   }
 }
