--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,23 @@
 #dashboard {
-  padding: 1rem;
-  padding-top: 6rem;
+  width: 90%;
+  height: 70%;
+  margin: auto;
+  padding-top: 10%;
   display: flex;
 }
 #maze {
   width: 60%;
-  min-height: 60vh;
+  height: 100%;
   text-align: center;
   resize: none;
 }
 #canvas {
+  background-color: white;
   width: 80%;
   padding: 2rem;
-  border: 3px solid black;
+  box-shadow: 0 0 0.25rem grey;
+}
+.App {
+  background-image: url('bg-maze.svg');
+  height: 100%;
 }
