--- a/client/src/SettingsComp/Settings.less
+++ b/client/src/SettingsComp/Settings.less
@@ -8,6 +8,7 @@
   box-shadow: 0 0 0.25rem grey;
 
   // NOTE remove tiny arrow buttons from number input fields
+  // LINK https://hirooooo-lab.com/development/html5-input-type-number-customize/
   & input[type=number]::-webkit-outer-spin-button,
     input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
