--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,17 +6,50 @@
   display: flex;
   justify-content: space-around;
 }
-
 #maze {
   background-color: white;
   width: 55%;
   height: 100%;
-  text-align: center;
+  padding: 0.25rem;
   box-shadow: 0 0 0.25rem grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-#canvas {
-  width: 80%;
-  padding: 2rem;
+#maze button {
+  bottom: 0;
+}
+#maze #grid-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#maze #grid-container #grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+#maze #grid-container #grid .cell {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  box-sizing: border-box;
+}
+#maze #grid-container #grid .cell:hover {
+  background-color: #316745;
+}
+#maze #grid-container #grid .cell.wall-top {
+  border-top: 2px solid black;
+}
+#maze #grid-container #grid .cell.wall-bot {
+  border-bottom: 2px solid black;
+}
+#maze #grid-container #grid .cell.wall-left {
+  border-left: 2px solid black;
+}
+#maze #grid-container #grid .cell.wall-right {
+  border-right: 2px solid black;
 }
 #top-bar {
   position: fixed;
@@ -27,6 +60,9 @@
   text-align: center;
   color: white;
   font-family: 'ポプらむ☆キュート', 'ピグモ', 'マメロン', '白川 篆文', '春秋tsu-教育漢字', 'MingLiU_HKSCS-ExtB', 'Microsoft JhengHei UI', 'KaiTi', 'FangSong', 'DengXian', 'DFKai-SB';
+}
+#top-bar h1 {
+  margin: 1rem;
 }
 #settings,
 #settings input,
