--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,15 +29,16 @@
 #maze #grid-container #grid {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 #maze #grid-container #grid .cell {
   width: 50px;
   height: 50px;
-  background-color: white;
   box-sizing: border-box;
 }
 #maze #grid-container #grid .cell:hover {
   background-color: #316745;
+  box-shadow: 0 0 0.25rem #316745;
 }
 #maze #grid-container #grid .cell.wall-top {
   border-top: 2px solid black;
