--- a/client/src/App.less
+++ b/client/src/App.less
@@ -38,15 +38,17 @@
   
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
   
       & .cell {
         width: 50px;
         height: 50px;
-        background-color: white;
+        // background-color: white;
         box-sizing: border-box;
 
         &:hover {
           background-color: @chitose-green;
+          box-shadow: 0 0 0.25rem @chitose-green;
         }
         
         &.wall-top {
@@ -61,7 +63,7 @@
         &.wall-right {
           border-right: 2px solid black; 
         }
-        
+
         // &:not(.wall-bot)::after {
         //   position: relative;
         //   left: 48px;
