--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,8 +8,8 @@
 }
 #maze {
   background-color: white;
-  width: 55%;
-  height: 100%;
+  min-width: 55%;
+  min-height: 80vh;
   padding: 0.25rem;
   box-shadow: 0 0 0.25rem grey;
   display: flex;
@@ -20,8 +20,8 @@
   bottom: 0;
 }
 #maze #grid-container {
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -43,7 +43,7 @@
 #maze #grid-container #grid .cell.wall-top {
   border-top: 2px solid black;
 }
-#maze #grid-container #grid .cell.wall-bot {
+#maze #grid-container #grid .cell.wall-bottom {
   border-bottom: 2px solid black;
 }
 #maze #grid-container #grid .cell.wall-left {
