--- a/client/src/SettingsComp/Settings.css
+++ b/client/src/SettingsComp/Settings.css
@@ -2,7 +2,7 @@
   background-color: #4c9b69;
   color: white;
   width: 40%;
-  min-height: 60vh;
+  height: 60vh;
   border-radius: 1%;
   box-shadow: 0 0 0.25rem grey;
 }
