🐞 fix(maze div): fix grid resize flex-shrink

--- a/client/src/SettingsComp/Settings.less
+++ b/client/src/SettingsComp/Settings.less
@@ -1,8 +1,9 @@
 #settings {
   background-color: #4c9b69;
   color: white;
-  width: 40%;
+  width: 40vw;
   height: 60vh;
+  flex-shrink: 0;
 
   border-radius: 1%;
   box-shadow: 0 0 0.25rem grey;
