--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 #maze {
   background-color: white;
@@ -15,6 +16,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex-shrink: 0;
 }
 #maze #commands {
   width: 60%;
