--- a/client/src/App.less
+++ b/client/src/App.less
@@ -7,6 +7,7 @@
   display:flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #maze {
@@ -21,6 +22,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  flex-shrink: 0;
 
   & #commands {
     width: 60%;
