--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,15 @@
   align-items: center;
   flex-wrap: wrap;
 }
+#commands {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+#commands #player-commands {
+  display: flex;
+  justify-content: space-around;
+}
 #maze {
   background-color: white;
   min-width: 55%;
@@ -17,11 +26,6 @@
   justify-content: space-between;
   align-items: center;
   flex-shrink: 0;
-}
-#maze #commands {
-  width: 60%;
-  display: flex;
-  justify-content: space-around;
 }
 #maze #grid-container {
   min-height: 100%;
