--- a/client/src/App.less
+++ b/client/src/App.less
@@ -15,10 +15,13 @@
   
   display: flex;
   flex-direction: column;
-  
+
   & #player-commands {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+  }
+  & button {
+    font-size: 1.5rem;
   }
 }
 
@@ -26,7 +29,7 @@
   background-color: white;
   min-width: 55%;
   min-height: 80vh;
-  padding: 0.25rem;
+  padding: 0.5rem;
 
   box-shadow: 0 0 0.25rem grey;
 
