--- a/client/src/SettingsComp/Settings.less
+++ b/client/src/SettingsComp/Settings.less
@@ -1,7 +1,7 @@
 #settings {
   background-color: #4c9b69;
   color: white;
-  width: 40vw;
+  width: 40%;
   height: 60vh;
   flex-shrink: 0;
 
@@ -52,6 +52,7 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: space-around;
 
       & label {
         text-align: center;
@@ -61,18 +62,5 @@
         width: 43%;
       }
     }
-
-    // & button {
-    //   background-color: rgb(240, 166, 28);
-    //   color: white;
-      
-    //   border: none;
-    //   border-radius: 2%;
-
-    //   &:hover {
-    //     background-color: rgba(240, 166, 28, 0.411);
-    //     color: rgb(255, 113, 113);
-    //   }
-    // }
   }
 }
