--- a/client/src/MazeComp/Maze.less
+++ b/client/src/MazeComp/Maze.less
@@ -42,6 +42,9 @@
         &.current {
           background-color: @chitose-green;
         }
+        &.stuck {
+          background-color: red;
+        }
         &.wall-top {
           border-top: 2px solid black;
         }
