🦄 refactor(controls): set controls on top

--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -1,5 +1,5 @@
 #maze {
-  background-color: white;
+  background-color: #316745;
   min-width: 55%;
   min-height: 80vh;
   padding: 0.5rem;
@@ -26,10 +26,10 @@
   width: 50px;
   height: 50px;
   box-sizing: border-box;
+  border-color: burlywood;
 }
 #maze #grid-container #grid .cell:hover {
   background-color: #316745;
-  background-image: url('bg-maze-white.svg');
   box-shadow: 0 0 0.25rem #316745;
 }
 #maze #grid-container #grid .cell.current {
@@ -39,14 +39,15 @@
   background-color: red;
 }
 #maze #grid-container #grid .cell.wall-top {
-  border-top: 2px solid black;
+  border-top: 2px solid;
+  border-color: inherit;
 }
 #maze #grid-container #grid .cell.wall-bottom {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid;
 }
 #maze #grid-container #grid .cell.wall-left {
-  border-left: 2px solid black;
+  border-left: 2px solid;
 }
 #maze #grid-container #grid .cell.wall-right {
-  border-right: 2px solid black;
+  border-right: 2px solid;
 }
