--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -1,8 +1,8 @@
 #maze {
-  background-color: #316745;
+  background-color: #15543B;
   min-width: 55%;
   min-height: 80vh;
-  padding: 0.5rem;
+  padding: 1rem;
   box-shadow: 0 0 0.25rem grey;
   display: flex;
   flex-direction: column;
@@ -21,12 +21,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  box-shadow: 0 0 0.5rem #CADBCF;
 }
 #maze #grid-container #grid .cell {
   width: 50px;
   height: 50px;
   box-sizing: border-box;
-  border-color: burlywood;
+  background-color: #CADBCF;
 }
 #maze #grid-container #grid .cell:hover {
   background-color: #316745;
@@ -40,7 +41,6 @@
 }
 #maze #grid-container #grid .cell.wall-top {
   border-top: 2px solid;
-  border-color: inherit;
 }
 #maze #grid-container #grid .cell.wall-bottom {
   border-bottom: 2px solid;
