--- a/client/src/MazeComp/Commands.less
+++ b/client/src/MazeComp/Commands.less
@@ -16,7 +16,16 @@
       color: white;
     }
 
+    &:active {
+      background-color: #4DB56A;
+      color: #15543B;
+    }
+
     border: 3px solid #CADBCF;
     border-radius: 2%;
+  }
+
+  & #toggle-play {
+    font-size: 2.5rem;
   }
 }
