--- a/client/src/MazeComp/Commands.css
+++ b/client/src/MazeComp/Commands.css
@@ -14,3 +14,10 @@
   border-color: #4DB56A;
   color: white;
 }
+#commands #reset:active {
+  background-color: #4DB56A;
+  color: #15543B;
+}
+#commands #toggle-play {
+  font-size: 2.5rem;
+}
