✨ feat(maze display): highlight visited cells

--- a/client/src/MazeComp/Maze.less
+++ b/client/src/MazeComp/Maze.less
@@ -33,7 +33,7 @@
         height: 50px;
         // NOTE border-box: border is inset
         box-sizing: border-box;
-        background-color: #CADBCF;
+        background-color: #99afa0;
 
         &:hover {
           background-color: @chitose-green;
@@ -41,6 +41,9 @@
           box-shadow: 0 0 0.25rem @chitose-green;
         }
         
+        &.visited {
+          background-color: #CADBCF;
+        }
         &.current {
           background-color: @chitose-green;
         }
