--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -27,11 +27,14 @@
   width: 50px;
   height: 50px;
   box-sizing: border-box;
-  background-color: #CADBCF;
+  background-color: #99afa0;
 }
 #maze #grid-container #grid .cell:hover {
   background-color: #316745;
   box-shadow: 0 0 0.25rem #316745;
+}
+#maze #grid-container #grid .cell.visited {
+  background-color: #CADBCF;
 }
 #maze #grid-container #grid .cell.current {
   background-color: #316745;
