--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -16,6 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-grow: 1;
 }
 #maze #grid-container #grid {
   display: flex;
