--- a/client/src/SettingsComp/SpeedSettings.css
+++ b/client/src/SettingsComp/SpeedSettings.css
@@ -5,13 +5,10 @@
   align-self: flex-start;
 }
 #speed-choice #indicators {
-  padding: 0;
+  margin-top: 0.5rem;
   width: 100%;
   display: flex;
   justify-content: space-between;
-}
-#speed-choice #indicators span {
-  height: 0.75rem;
 }
 #speed-choice input[type=range] {
   -webkit-appearance: none;
