--- a/client/src/SettingsComp/SpeedSettings.less
+++ b/client/src/SettingsComp/SpeedSettings.less
@@ -7,14 +7,10 @@
 }
 
 #speed-choice #indicators {
-  padding: 0;
+  margin-top: 0.5rem;
   width: 100%;
   display: flex;
   justify-content: space-between;
-
-  & span {
-    height: 0.75rem;
-  }
 }
 
 #speed-choice input[type=range] {
