--- a/client/src/MazeComp/Maze.less
+++ b/client/src/MazeComp/Maze.less
@@ -36,7 +36,8 @@
         box-sizing: border-box;
         background-color: #99afa0;
 
-        &:hover {
+        &:hover,
+        &.visited:hover {
           background-color: @chitose-green;
           // background-image: url('./bg-maze-white.svg');
           box-shadow: 0 0 0.25rem @chitose-green;
