✨ feat(fps setting): show current set fps

--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -1,6 +1,6 @@
 #maze {
   background-color: #15543B;
-  min-width: 55%;
+  width: 55%;
   min-height: 80vh;
   padding: 1rem;
   box-shadow: 0 0 0.25rem grey;
