--- a/client/src/MazeComp/Maze.less
+++ b/client/src/MazeComp/Maze.less
@@ -2,7 +2,7 @@
 
 #maze {
   background-color: #15543B;
-  min-width: 55%;
+  width: 55%;
   min-height: 80vh;
   padding: 1rem;
 
@@ -23,7 +23,6 @@
     flex-grow: 1;
 
     & #grid {
-  
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
