--- a/client/src/SettingsComp/SpeedSettings.css
+++ b/client/src/SettingsComp/SpeedSettings.css
@@ -1,14 +1,23 @@
 #speed-choice {
   align-items: center;
 }
-#speed-choice label {
+#speed-choice label,
+#speed-choice #indicators {
   align-self: flex-start;
 }
 #speed-choice #indicators {
   margin-top: 0.5rem;
-  width: 100%;
+  width: 105%;
   display: flex;
   justify-content: space-between;
+}
+#speed-choice #indicators #fps-span {
+  background-color: white;
+  width: 2rem;
+  height: 1.5rem;
+  text-align: center;
+  color: black;
+  border: 1px solid black;
 }
 #speed-choice input[type=range] {
   -webkit-appearance: none;
