--- a/client/src/SettingsComp/SpeedSettings.less
+++ b/client/src/SettingsComp/SpeedSettings.less
@@ -2,13 +2,13 @@
   align-items: center;
 
   & label, #indicators {
-    align-self: flex-start;
+    align-self: flex-end;
   }
 }
 
 #speed-choice #indicators {
   margin-top: 0.5rem;
-  width: 105%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   
