🌈 style(UI): round maze corners
+ give better color to slider button

--- a/client/src/SettingsComp/SpeedSettings.css
+++ b/client/src/SettingsComp/SpeedSettings.css
@@ -51,6 +51,7 @@
   appearance: none;
   cursor: pointer;
   border: 2px solid rgba(0, 0, 0, 0.7);
+  background-color: #e8ffef;
   width: 27px;
   height: 27px;
   display: block;
