--- a/client/src/MazeComp/Maze.css
+++ b/client/src/MazeComp/Maze.css
@@ -4,6 +4,7 @@
   min-height: 80vh;
   padding: 1rem;
   box-shadow: 0 0 0.25rem grey;
+  border-radius: 1%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
