--- a/client/src/SettingsComp/SpeedSettings.css
+++ b/client/src/SettingsComp/SpeedSettings.css
@@ -13,7 +13,7 @@
 }
 #speed-choice #indicators #fps-span {
   background-color: white;
-  width: 2rem;
+  min-width: 2rem;
   height: 1.5rem;
   text-align: center;
   color: black;
