--- a/client/src/SettingsComp/SpeedSettings.less
+++ b/client/src/SettingsComp/SpeedSettings.less
@@ -14,7 +14,7 @@
   
   & #fps-span {
     background-color: white;
-    width: 2rem;
+    min-width: 2rem;
     height: 1.5rem;
 
     text-align: center;
