--- a/client/src/Components/Grid/Commands/Commands.css
+++ b/client/src/Components/Grid/Commands/Commands.css
@@ -1,9 +1,20 @@
+#commands {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+#commands #player-commands {
+  display: flex;
+  justify-content: space-between;
+}
 #commands #player-commands button {
   background-color: transparent;
   border: none;
+  font-size: 2.5rem;
 }
 #commands #reset {
   margin-bottom: 0.5rem;
+  font-size: 1.8rem;
   background-color: #4DB56A;
   color: #15543B;
   border: 3px solid #CADBCF;
@@ -17,7 +28,4 @@
 #commands #reset:active {
   background-color: #4DB56A;
   color: #15543B;
-}
-#commands #toggle-play {
-  font-size: 2.5rem;
 }
